@@ -117,7 +117,7 @@ public class GUITaskProgression extends JFrame
                         GUIObject.setComponentPreferredSize(progressBar, 10);
                         label = new JLabel();
                         GUIObject.setComponentPreferredSize(label, 10);
-                        progression = new Integer(0);
+                        progression = Integer.valueOf(0);
 
                         // Memorisation dans les containers
                         mainLabels.setElementAt(mainLabel, level);
@@ -449,7 +449,7 @@ public class GUITaskProgression extends JFrame
         {
                 if (currentLevel < 0 || currentLevel > levelNumber)
                         return;
-                Integer progression = new Integer(progressionValue);
+                Integer progression = Integer.valueOf(progressionValue);
                 progressions.setElementAt(progression, currentLevel);
                 JProgressBar progressBar = (JProgressBar)progressBars.get(currentLevel);
                 progressBar.setValue(progressionValue);
